[package]
name = "rust_zksnark"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-circom = "0.5.0"
ark-bn254 = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
ark-std = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
tokio = "1.4.3"

num-bigint = { version = "0.4.3", default-features = false, features = ["rand", "serde"] }

wasmer = "4.4.0"

rand = "0.8.5"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

num-traits = "0.2"
thiserror = "1.0"
ark-zkey = "0.1.2"
clap = "4.5.30"

once_cell = "1.8.0" # For lazy_static
ark-relations = "0.5.1"
log = "0.4.26"
memmap2 = "0.9.5"
color-eyre = "0.6.3"

[lib]
name = "rust_zksnark"  # Library name
crate-type = ["cdylib"]  # For C-compatible dynamic libraries
